nginx/deployment.yml
kind: Deployment
apiVersion: apps/v1

metadata:
  name: nginx-deployment
  namespace: nginx-ns
  labels:
    app: nginx

spec:
  replicas: 6
  selector:
    matchLabels:
     app: nginx
  template:
    metadata:
     name: nginx-pod
     namespace: nginx-ns
     labels:
       app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
