nginx/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1


metadata:
  name: nginx-ingress
  namespace: nginx-ns


spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /nginx
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
